# my_bot

./: frames.gv
devel/: .catkin  .rosinstall  setup.sh
devel/lib/bot/: mobile_robot_hardware_interface  motor_control.py
devel/lib/hector_compressed_map_transport/: map_to_image_node
devel/lib/hector_geotiff/: geotiff_node  geotiff_saver
devel/lib/hector_imu_attitude_to_tf/: imu_attitude_to_tf_node
devel/lib/hector_imu_tools/: pose_and_orientation_to_imu_node
devel/lib/hector_map_server/: hector_map_server
devel/lib/hector_trajectory_server/: hector_trajectory_server
devel/lib/localization_data_pub/: ekf_odom_pub  rviz_click_to_2d
devel/lib/mobile_robot_autonomous_navigation/: mobile_robot_hardware_interface  motor_control.py
devel/lib/motor_control/: motor_control.py
devel/lib/pkgconfig/: bot.pc  hector_compressed_map_transport.pc  hector_geotiff.pc  hector_geotiff_launch.pc  hector_geotiff_plugins.pc  hector_imu_attitude_to_tf.pc  hector_imu_tools.pc  hector_map_server.pc  hector_map_tools.pc  hector_mapping.pc  hector_marker_drawing.pc  hector_nav_msgs.pc  hector_slam_launch.pc  hector_trajectory_server.pc  launch_jetson_nano_bot.pc  localization_data_pub.pc  mobile_robot_autonomous_navigation.pc  motor_control.pc  rplidar_ros.pc  (+1 more)
maps/: my_map.rviz
src/bot/: CMakeLists.txt  package.xml
src/bot/config/: controllers.yaml
src/bot/include/: mobile_robot_hardware_interface.h
src/bot/launch/: control_check.launch
src/bot/src/: mobile_robot_hardware_interface.cpp  mobile_robot_hardware_interface_node.cpp
src/bot/urdf/: mobile_robot.urdf.xacro
(+44 files in other folders)
